<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupElderly">

    <TextView
        android:id="@+id/signuptitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/register_new_care_client"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="345dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuptitle"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/editTextText12"
        android:layout_width="345dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/contact_number"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText11"
        android:autofillHints="number" />

    <EditText
        android:id="@+id/editTextText13"
        android:layout_width="345dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText12"
        android:autofillHints="date of birth" />

    <EditText
        android:id="@+id/editTextText14"
        android:layout_width="345dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText13"
        android:autofillHints="postalAddress"
        android:backgroundTint="@color/green_light"/>

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="345dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/editTextText10"
        android:layout_width="345dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/pin"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText9"
        android:autofillHints="pin" />

    <EditText
        android:id="@+id/editTextText11"
        android:layout_width="345dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Confirm PIN"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText10"
        android:autofillHints="pin"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button11"
        android:layout_width="139dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText14"
        android:backgroundTint="@color/green_light"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/green_light"/>


</androidx.constraintlayout.widget.ConstraintLayout>