<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealHistoryActivity">

    <TextView
        android:id="@+id/week"
        android:layout_width="404dp"
        android:layout_height="85dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="      Week"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-37dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="501dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626">


        <TextView
            android:id="@+id/monday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/green_light"
            android:text="@string/monday"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/green_light"
            android:text="@string/tuesday"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/green_light"
            android:text="@string/wednesday"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/thursday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/green_light"
            android:text="@string/thursday"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/friday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/green_light"
            android:text="@string/friday"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/saturday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/green_light"
            android:text="@string/saturday"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/sunday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/green_light"
            android:text="@string/sunday"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="17dp"
        android:background="@color/green"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        app:menuAlignmentMode="start"
        tools:ignore="BottomAppBar">

    </com.google.android.material.bottomappbar.BottomAppBar>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="194dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/forward"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/week" />


</androidx.constraintlayout.widget.ConstraintLayout>